--- a/build_coincheck_batch/Dockerfile
+++ b/build_coincheck_batch/Dockerfile
@@ -1,5 +1,7 @@
+#
 # Dockerfile batch of coincheck by language golang
-# Compiled before the resource is here @https://github.com/KoganezawaRyouta/go-test/tree/master/mygo/src/coincheck/batch
+# Compiled before the resource is here @src/coincheck/main.go
+#
 FROM enakai00/centos:centos6
 MAINTAINER Ryota Koganezawa
 
@@ -14,9 +16,7 @@ RUN chmod u+x /usr/local/bin/install_golang.sh && /usr/local/bin/install_golang.
 ADD bash_profile /root/.bash_profile
 RUN source ~/.bash_profile
 
-ADD ./bin/coincheck_batch /usr/local/bin/coincheck_batch
-RUN chmod u+x /usr/local/bin/coincheck_batch
-
+ADD ./bin/ /usr/local/bin/
 ADD run.sh /usr/local/bin/run.sh
 RUN chmod u+x /usr/local/bin/run.sh
-CMD ["/usr/local/bin/run.sh"]
+ENTRYPOINT ["/usr/local/bin/run.sh"]
