--- a/build_coincheck_batch/Dockerfile
+++ b/build_coincheck_batch/Dockerfile
@@ -1,6 +1,6 @@
 #
 # Dockerfile batch of coincheck by language golang
-# Compiled before the resource is here @src/coincheck/main.go
+# Compiled before the resource is here @app/src/coincheck/main.go
 #
 FROM enakai00/centos:centos6
 MAINTAINER Ryota Koganezawa
@@ -16,7 +16,10 @@ RUN chmod u+x /usr/local/bin/install_golang.sh && /usr/local/bin/install_golang.
 ADD bash_profile /root/.bash_profile
 RUN source ~/.bash_profile
 
-ADD ./bin/ /usr/local/bin/
+ADD ./app/ /root/app/
+WORKDIR /root/app
+RUN chmod u+x /root/app/build.sh && /root/app/build.sh
+
 ADD run.sh /usr/local/bin/run.sh
 RUN chmod u+x /usr/local/bin/run.sh
 ENTRYPOINT ["/usr/local/bin/run.sh"]
