--- a/build_coincheck_web/containers/nginx/Dockerfile
+++ b/build_coincheck_web/containers/nginx/Dockerfile
@@ -5,11 +5,12 @@
 FROM enakai00/centos:centos6
 MAINTAINER Ryota Koganezawa
 
-ADD templates/nginx.repo /etc/yum.repos.d/nginx.repo
+RUN rpm -ivh http://nginx.org/packages/centos/6/noarch/RPMS/nginx-release-centos-6-0.el6.ngx.noarch.rpm
 RUN yum update -y && \
-    yum install nginx
+    yum -y install nginx
 
 COPY templates/nginx.conf /etc/nginx/nginx.conf
 COPY templates/vhosts.conf /etc/nginx/conf.d/vhosts.conf
 
 VOLUME ./volume/nginx:/var/log/nginx
+CMD service nginx start
