--- a/build_coincheck_web/containers/nginx/templates/nginx.conf
+++ b/build_coincheck_web/containers/nginx/templates/nginx.conf
@@ -40,6 +40,24 @@ http {
     gzip off;
     gzip_vary off;
 
-    include /etc/nginx/conf.d/*.conf;
+    upstream web-container { server go:9000; }
+    server {
+        listen 80;
+        # server_name dev.coincheck.com;
+        location / {
+            proxy_set_header Host $host;
+            include fastcgi_params;
+            fastcgi_keep_conn on;
+            fastcgi_pass web-container;
+            break;
+        }
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # include /etc/nginx/conf.d/*.conf;
     # include /etc/nginx/sites-enabled/*.conf;
 }
