--- a/build_coincheck_web/containers/nginx/Dockerfile
+++ b/build_coincheck_web/containers/nginx/Dockerfile
@@ -6,11 +6,11 @@ FROM enakai00/centos:centos6
 MAINTAINER Ryota Koganezawa
 
 RUN rpm -ivh http://nginx.org/packages/centos/6/noarch/RPMS/nginx-release-centos-6-0.el6.ngx.noarch.rpm
-RUN yum update -y && \
-    yum -y install nginx
+RUN yum update -y && yum -y install nginx
 
 COPY templates/nginx.conf /etc/nginx/nginx.conf
-COPY templates/vhosts.conf /etc/nginx/conf.d/vhosts.conf
+# COPY templates/vhosts.conf /etc/nginx/conf.d/vhosts.conf
 
-VOLUME ./volume/nginx:/var/log/nginx
-CMD service nginx start
+EXPOSE 80
+
+ENTRYPOINT /usr/sbin/nginx -g 'daemon off;' -c /etc/nginx/nginx.conf
